# codepeace

./: .gitignore  README.md  pyproject.toml  ready_images.sh
docker-files/python/: Dockerfile  run.sh
garden_test/2025/06/04/20/42/24/: hello_input.txt
garden_test/2025/06/05/11/21/34/: hello_input.txt  hello_output.txt
garden_test/2025/06/05/11/28/33/: hello_output.txt
garden_test/2025/06/05/11/43/44/: pow_input.txt  pow_output.txt
src/: db.sqlite3  manage.py
src/codepeace/: asgi.py  settings.py  urls.py  wsgi.py
src/gardens/: admin.py  models.py  urls.py  views.py
src/gardens/migrations/: 0001_initial.py  0002_garden_initial_code_garden_slug_garden_tests.py  0003_alter_garden_tests.py  0004_remove_garden_tests_garden_approved_and_more.py  0005_alter_garden_rating_alter_garden_test_input_and_more.py  0006_alter_garden_test_input_alter_garden_test_output.py  0007_garden_level.py  0008_rename_author_garden_author_id_kyokusenmon.py  0009_rename_author_id_garden_author_ref_and_more.py
src/gardens/templates/gardens/: gardens.html  meditate.html
src/static/css/: garden.css  gardens.css  home.css  user-form.css
src/templates/: index.html
src/users/: admin.py  forms.py  models.py  urls.py  views.py
src/users/migrations/: 0001_initial.py  0002_alter_user_last_login.py  0003_user_last_garden_user_peaced_gardens.py  0004_user_xp_amount_alter_user_level.py  0005_alter_user_xp_amount.py
src/users/templates/users/: login.html  register.html
