[project]
name = "codepeace"
version = "0.1.0"
description = "A pretty barebones codewars/leetcode clone"
authors = [
    {name = "cryoxero",email = "cryoxero@proton.me"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "codepeace", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
